mysql-8.4/0.0.1/install.mdx
---
title: "Installing Extensions"
description: "How to add new capabilities to VillageSQL using extensions."
---

Install VillageSQL extensions to add custom types, functions, and capabilities to your database.

<Note>
  Custom indexes and aggregate functions for extensions are coming in a future release.
</Note>

## Command Syntax

```sql
INSTALL EXTENSION 'extension_name';
```

<Info>
  Extensions are distributed as `.veb` (VillageSQL Extension Bundle) files containing compiled libraries and metadata.
</Info>

### Extension Naming Conventions

VillageSQL uses different naming conventions in different contexts:

- **SQL commands:** Use underscores: `INSTALL EXTENSION 'vsql_complex'`
- **Repository names:** Use hyphens: `github.com/villagesql/vsql-complex`
- **File names:** Use underscores: `vsql_complex.veb`
- **manifest.json:** Use underscores to match SQL: `"name": "vsql_complex"`

**Example:**
```bash
# Download from GitHub repo (hyphens in URL)
git clone https://github.com/villagesql/vsql-complex

# But .veb file uses underscores
ls vsql_complex.veb

# Install with underscores (no quotes)
INSTALL EXTENSION vsql_complex;
```

## Prerequisites

- Running VillageSQL Server instance
- Administrative access (root or equivalent)
- Extension `.veb` file in vef_dir (check with `SHOW VARIABLES LIKE 'vef_dir';`)

## Installing Built-in Extensions

Built-in extensions included with VillageSQL are already in the vef_dir. Simply enable them:

```sql
-- Connect to VillageSQL
mysql -u root -p

-- Install the extension
INSTALL EXTENSION vsql_complex;
```

### Verify Installation

```sql
-- List installed extensions
SELECT * FROM INFORMATION_SCHEMA.EXTENSIONS;
```

**Output:**
```
+------------------+-------------------+
| EXTENSION_NAME   | EXTENSION_VERSION |
+------------------+-------------------+
| vsql_complex     | 1.0.0             |
+------------------+-------------------+
```

### Test Functionality

```sql
-- Create a database first
CREATE DATABASE test_db;
USE test_db;

-- Test extension functions
CREATE TABLE test (id INT, value COMPLEX);
INSERT INTO test VALUES (1, '(3,4)');
SELECT vsql_complex.complex_abs(value) FROM test;  -- Returns 5.0

-- Clean up
DROP TABLE test;
DROP DATABASE test_db;
```

## Installing External Extensions

For extensions downloaded or built separately:

### 1. Find VEF Directory

```sql
SHOW VARIABLES LIKE 'vef_dir';
```

**Common locations:**
- Linux: `/usr/local/mysql/lib/veb/`
- macOS: `/usr/local/mysql/lib/veb/`

### 2. Copy Extension File

```bash
# Copy .veb file to vef_dir
sudo cp my-extension.veb /path/to/vef_dir/

# Verify file exists
ls -l /path/to/vef_dir/*.veb
```

### 3. Install Extension

```sql
INSTALL EXTENSION my_extension;
```

### 4. Verify Installation

```sql
SELECT * FROM INFORMATION_SCHEMA.EXTENSIONS WHERE EXTENSION_NAME = 'my_extension';
```

## Troubleshooting

| Issue | Solution |
|-------|----------|
| `Extension not found` | Verify .veb file is in vef_dir with correct name |
| `Permission denied` | Check file permissions: `chmod 644 extension.veb` |

For more troubleshooting, see [Managing Extensions](/mysql-8.4/0.0.1/managing).

## Next Steps

<CardGroup cols={2}>
  <Card
    title="Managing Extensions"
    icon="sliders"
    href="/mysql-8.4/0.0.1/managing"
  >
    Monitor and troubleshoot installed extensions
  </Card>
  <Card
    title="Available Extensions"
    icon="list"
    href="/mysql-8.4/0.0.1/list"
  >
    Browse extensions you can install
  </Card>
  <Card
    title="Create Extensions"
    icon="code"
    href="/mysql-8.4/0.0.1/create"
  >
    Build your own extensions
  </Card>
</CardGroup>